--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
         "denpa/php-bitcoinrpc": "^2.0",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "odan/base32": "^0.3.2",
-        "pragmarx/google2fa-laravel": "^0.1.4"
+        "pragmarx/google2fa-laravel": "^0.1.4",
+        "aws/aws-sdk-php": "~3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
